Togglable button alignment fixed to switch bw editing and viewing mode

--- a/src/Styles/Resume.css
+++ b/src/Styles/Resume.css
@@ -10,4 +10,5 @@
     background-color: white;
     color: black;
     min-height: 80vh;
+    font-size: 1.25em;
 }
